# SWHE_PLWE

./: CMakeLists.txt  README.md  debug.c  main.c
include/: asym.c  asym.h  binary_tree.c  binary_tree.h  dist.c  dist.h  encoding.c  encoding.h  key.c  key.h  message.c  message.h  plwe_poly.c  plwe_poly.h  threading.c  threading.h  util.c  util.h  wrapper.c  wrapper.h
